--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = ">=3.10"
 dependencies = [
     "lxml>=6.0.1",
     "networkx<3",
-    "numpy>=2.2.6",
+    "numpy<2",
     "pillow>=11.3.0",
     "pycollada>=0.9.2",
     "pyrender>=0.1.45",
